# Horoskooppigeneraattori

./: .coverage  .coveragerc  .gitignore  .pylintrc  README.md  aineisto.txt  pyproject.toml  tasks.py
documentation/: kaytto-ohje.md  maarittelydokumentti.md  testausraportti.md  toteutusdokumentti.md  viikkoraportti1.md.save  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
dokumentaatio/: kaytto-ohje.md  maarittelydokumentti.md  maarittelydokumentti.md.save  testausraportti.md  toteutusdokumentti.md
dokumentaatio/viikkoraportit/: viikkoraportti1.md  viikkoraportti5.md
src/: file_reader.py  index.py  markov_chain.py  markovin_ketju.py  tekstin_siistija.py  tiedostonluku.py  trie.py  ui.py
src/tests/: chain_test.py  file_reader_test.py  testfile.txt  trie_test.py
src/ui/: kayttoliittyma.py  ui.py
